test/files/neg/t7756b.scala
//> using options -Xfatal-warnings
//
object Test {
  0 match {
    case _ => 0 == ""
  }
}
