test/files/neg/t7756b.check
t7756b.scala:5: warning: comparing values of types Int and String using `==` will always yield false
    case _ => 0 == ""
                ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
